# AlgortihmsPython

./: Anagrams.py  DecimalToBinary.py  GreatestCommonDivisor.py  ListLike.py  Palindrome.py  README.md  app.py  cdamount.java  pyproject.toml  rand_func.py  requirements.txt
movies/: db.py  main.py  models.py  sample.py  schemas.py
movies/api/: categories.py  movies.py  users.py
